Integrated servers example